--- a/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
@@ -7,14 +7,15 @@
 
 <AnchorPane fx:id="root" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
     <children>
-        <Label focusTraversable="false" layoutX="108.0" layoutY="68.0" text="Dashboard">
+        <Label focusTraversable="false" layoutX="440.0" layoutY="34.0" text="Dashboard">
             <font>
                 <Font size="25.0" />
             </font>
         </Label>
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="199.0" onAction="#registrationOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Registration" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="300.0" onAction="#roomsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Rooms" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="404.0" onAction="#keyMoneyOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Find Key Money" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="502.0" onAction="#userOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage User" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="308.0" onAction="#registrationOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Reservation" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="218.0" onAction="#roomsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Rooms" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="89.0" layoutY="399.0" onAction="#keyMoneyOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Key Money" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="492.0" onAction="#userOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage User" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="127.0" onAction="#studentsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Students" />
     </children>
 </AnchorPane>
