--- a/src/lk/ijse/gdse66/hostel/view/manage_keymoney_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/manage_keymoney_form.fxml
@@ -10,13 +10,13 @@
 
 <AnchorPane fx:id="root" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageKeymoneyFormController">
     <children>
-        <Label focusTraversable="false" layoutX="412.0" layoutY="28.0" text="Find Key Money">
+        <Label focusTraversable="false" layoutX="412.0" layoutY="27.0" text="Find Key Money">
             <font>
                 <Font size="25.0" />
             </font>
         </Label>
         <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="18.0" layoutY="15.0" onAction="#backOnAction" prefWidth="80.0" style="-fx-background-color: lightblue;" text="Back" />
-        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="816.0" layoutY="78.0" onAction="#searchOnAction" promptText="REG-001" />
+        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="816.0" layoutY="78.0" onAction="#searchOnAction" promptText="RES001" />
         <TableView focusTraversable="false" layoutX="12.0" layoutY="141.0" prefHeight="445.0" prefWidth="973.0">
             <columns>
                 <TableColumn editable="false" minWidth="139.0" prefWidth="75.0" resizable="false" text="Reserve ID" />
